# os_lab_2019

lab0/hello/: hello_world
lab1/src/: averae.sh  numbers.txt  rnd.sh
lab2/src/revert_string/: .revert_string.c.swp  Makefile  a.out  main.c  revert_string.c  revert_string.h  revert_string.h.gch
lab2/src/swap/: swap.c  swap.h.gch
lab3/src/: 5z  5z.c  makefile  min_max_out.txt  out  parallel_min_max  parallel_min_max.c  sequential_min_max
lab4/src/: CMakeLists.txt  Makefile  find_min_max.c  parallel_min_max  parallel_min_max.c  parallel_sum  parallel_sum.c  process_memory  process_memory.c  zombie.c  zombies  zombies.c
lab4/src/lib4/: Makefile  generate_array.c  print_arr.c  sum_arr.c
lab4/src/lib4/includes/: lib4.h
lab5/src/: Makefile  a.out  deadlock.c  mod  mod.c  mutex  mutex.c
lab7/src/: makefile  tcpclient.c  tcpserver.c  udpclient.c  udpserver.c
